Add level attribute to AtkObjects

The level attributes specifies the hierarchical level of the element.
This is used for HTML heading elements.

TEST=accessibility_unittests --gtest_filter=AXPlatformNodeAuraLinuxTest.*

Bug: 866612
Change-Id: If3e1d5192dc6d0749bdaffda203d4539ea02bf63
Reviewed-on: https://chromium-review.googlesource.com/1150144
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577917}
Former-commit-id: e1d017d5a4c855d3e0186904628c5106c3199a71