ui/accessibility/platform/ax_platform_node_auralinux.cc
@@ -7,6 +7,7 @@
 #include <stdint.h>
 
 #include "base/command_line.h"
+#include "base/strings/string_number_conversions.h"
 #include "base/strings/sys_string_conversions.h"
 #include "base/strings/utf_string_conversions.h"
 #include "ui/accessibility/ax_action_data.h"
@@ -306,7 +307,13 @@ static AtkRelationSet* ax_platform_node_auralinux_ref_relation_set(
 
 static AtkAttributeSet* ax_platform_node_auralinux_get_attributes(
     AtkObject* atk_object) {
-  return NULL;
+
+  ui::AXPlatformNodeAuraLinux* obj =
+      AtkObjectToAXPlatformNodeAuraLinux(atk_object);
+  if (!obj)
+    return nullptr;
+
+  return obj->GetAtkAttributes();
 }
 
 static AtkRole ax_platform_node_auralinux_get_role(AtkObject* atk_object) {
@@ -1533,6 +1540,15 @@ const gchar* AXPlatformNodeAuraLinux::GetDefaultActionName() {
   ATK_AURALINUX_RETURN_STRING(base::UTF16ToUTF8(action_verb));
 }
 
+AtkAttributeSet* AXPlatformNodeAuraLinux::GetAtkAttributes() const {
+  AtkAttributeSet* atk_attributes = nullptr;
+
+  atk_attributes = AddIntAttributeToAtkAttributeSet(
+      atk_attributes, ax::mojom::IntAttribute::kHierarchicalLevel, "level");
+
+  return atk_attributes;
+}
+
 // AtkDocumentHelpers
 
 const gchar* AXPlatformNodeAuraLinux::GetDocumentAttributeValue(
@@ -1549,6 +1565,17 @@ const gchar* AXPlatformNodeAuraLinux::GetDocumentAttributeValue(
   return nullptr;
 }
 
+static AtkAttributeSet* PrependAtkAttributeToAtkAttributeSet(
+    AtkAttributeSet* attribute_set,
+    const char* name,
+    const char* value) {
+  AtkAttribute* attribute =
+      static_cast<AtkAttribute*>(g_malloc(sizeof(AtkAttribute)));
+  attribute->name = g_strdup(name);
+  attribute->value = g_strdup(value);
+  return g_slist_prepend(attribute_set, attribute);
+}
+
 AtkAttributeSet* AXPlatformNodeAuraLinux::GetDocumentAttributes() const {
   AtkAttributeSet* attribute_set = nullptr;
   const gchar* doc_attributes[] = {"DocType", "MimeType", "Title", "URI"};
@@ -1557,11 +1584,8 @@ AtkAttributeSet* AXPlatformNodeAuraLinux::GetDocumentAttributes() const {
   for (unsigned i = 0; i < G_N_ELEMENTS(doc_attributes); i++) {
     value = GetDocumentAttributeValue(doc_attributes[i]);
     if (value) {
-      AtkAttribute* attribute =
-          static_cast<AtkAttribute*>(g_malloc(sizeof(AtkAttribute)));
-      attribute->name = g_strdup(doc_attributes[i]);
-      attribute->value = g_strdup(value);
-      attribute_set = g_slist_prepend(attribute_set, attribute);
+      attribute_set = PrependAtkAttributeToAtkAttributeSet(
+          attribute_set, doc_attributes[i], value);
     }
   }
 
@@ -1599,6 +1623,19 @@ void AXPlatformNodeAuraLinux::GetFloatAttributeInGValue(
     g_value_init(value, G_TYPE_FLOAT);
     g_value_set_float(value, float_val);
   }
+}
+
+AtkAttributeSet* AXPlatformNodeAuraLinux::AddIntAttributeToAtkAttributeSet(
+    AtkAttributeSet* attributes,
+    ax::mojom::IntAttribute attribute,
+    const char* atk_attribute) const {
+  int value;
+  if (GetIntAttribute(attribute, &value)) {
+    attributes = PrependAtkAttributeToAtkAttributeSet(
+        attributes, atk_attribute, base::IntToString(value).c_str());
+  }
+
+  return attributes;
 }
 
 }  // namespace ui
